--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <base href="/"></head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Terry Davies Jr. | Web Developer</title>
+<title>Terry Davies Jr. | Software Engineer</title>
 <link rel="stylesheet" type="text/css" href="assets/css/normalize.min.css" />
 <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 <script type="text/javascript" src="assets/js/modernizr.min.js"></script>
@@ -18,7 +18,7 @@
 	<div id="hero-background"></div>
 	<canvas id="hero-canvas"></canvas>
     <div id="hero-content">
-    	<h1><span id="name">Terry Davies Jr.</span><span id="title">Web Developer</span></h1>
+    	<h1><span id="name">Terry Davies Jr.</span><span id="title">Software Engineer</span></h1>
     </div>
     <div id="scroll">
     	<span>Scroll</span>
